integration-tests/src/test-cases/parse-error-evocation-in-query/expected
parse error: from "test-cases/parse-error-evocation-in-query/input", line 1:
| query !x
|       ^^
|
+-> Syntax error: while parsing query definition, query expressions cannot contain evoke effects, e.g. `!…`

